# the_best_team

./: README.md  compose.yaml  database.py  insert_value_table.py  main.py  pyproject.toml  settings.py  tables.py
api/: __init__.py  auth.py  main.py
models/: __init__.py  auth.py  main.py
services/: auth.py  main.py
src/auth/: index.html  signup.html
src/error/: 404.html  500.html
src/main/: index.html
src/static/auth/: style.css
