[tool.poetry]
name = "mti"
version = "1"
description = ""
authors = ["akharkov88 <akharkov88@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^4.9.4"
openpyxl = "^3.1.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.0"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = "^1.10.13"
fastapi = "^0.104.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}
asyncpg = "^0.29.0"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
